--- a/src/Osu.Music.UI/Views/DialogAboutView.xaml
+++ b/src/Osu.Music.UI/Views/DialogAboutView.xaml
@@ -25,53 +25,60 @@
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
-    <Border Background="White" CornerRadius="10 10 5 5" Padding="0 0 0 5">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="15" ShadowDepth="0" Direction="0"/>
-        </Border.Effect>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="160"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Border Background="{DynamicResource SolidColorBrushMain}" CornerRadius="5 5 0 0">
-                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-                    <TextBlock FontFamily="{DynamicResource MaterialIcons}" Text="&#xf01f;" FontSize="100" Foreground="White"/>
-                    <TextBlock Text="osu.Music" Style="{DynamicResource MenuHeader}" HorizontalAlignment="Center" Margin="0" FontSize="16" Foreground="White"/>
-                    <TextBlock Style="{DynamicResource MenuDefault}" HorizontalAlignment="Center" Margin="0 5 0 20" FontSize="16" Foreground="White"
+    <Grid Margin="0 0 0 16">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="160"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Border Background="{DynamicResource SolidColorBrushMain}" CornerRadius="5 5 0 0">
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                <TextBlock FontFamily="{DynamicResource MaterialIcons}" Text="&#xf01f;" FontSize="100" Foreground="White"/>
+                <TextBlock Text="osu.Music" Style="{DynamicResource MenuHeader}" HorizontalAlignment="Center" Margin="0" FontSize="16" Foreground="White"/>
+                <TextBlock Style="{DynamicResource MenuDefault}" HorizontalAlignment="Center" Margin="0 5 0 20" FontSize="16" Foreground="White"
                            Text="{Binding DataContext.Version, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:DialogAboutView}}}"/>
-                </StackPanel>
-            </Border>
-            <ScrollViewer Grid.Row="1" Margin="0 5 0 0">
-                <StackPanel Orientation="Vertical" Margin="5">
-                    <Expander>
-                        <Expander.Header>
-                            <TextBlock Text="License" Style="{DynamicResource MenuHeader}" VerticalAlignment="Center" Padding="0 0 0 0"/>
-                        </Expander.Header>
-                        <TextBlock Style="{DynamicResource LicenseText}" Margin="39 0 0 0" TextWrapping="Wrap"
+            </StackPanel>
+        </Border>
+        <ScrollViewer Grid.Row="1" Margin="0 5 0 0">
+            <StackPanel Orientation="Vertical" Margin="5">
+                <Expander>
+                    <Expander.Header>
+                        <TextBlock Text="License" Style="{DynamicResource MenuHeader}" VerticalAlignment="Center" Padding="0 0 0 0"/>
+                    </Expander.Header>
+                    <TextBlock Style="{DynamicResource LicenseText}" Margin="39 0 0 0" TextWrapping="Wrap"
                                Text="{Binding DataContext.Licenses.application.sourceText, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:DialogAboutView}}}"/>
-                    </Expander>
-                    <Expander>
-                        <Expander.Header>
-                            <TextBlock Text="Open Source Notices" Style="{DynamicResource MenuHeader}" VerticalAlignment="Center" Padding="0 0 0 0"/>
-                        </Expander.Header>
-                        <ItemsControl ItemsSource="{Binding DataContext.Licenses.notices, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:DialogAboutView}}}" ItemTemplate="{StaticResource LicenseTemplate}"
+                </Expander>
+                <Expander>
+                    <Expander.Header>
+                        <TextBlock Text="Open Source Notices" Style="{DynamicResource MenuHeader}" VerticalAlignment="Center" Padding="0 0 0 0"/>
+                    </Expander.Header>
+                    <ItemsControl ItemsSource="{Binding DataContext.Licenses.notices, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:DialogAboutView}}}" ItemTemplate="{StaticResource LicenseTemplate}"
                               ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <VirtualizingStackPanel Margin="23 0 0 0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel Margin="23 0 0 0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
 
-                            <ItemsControl.Template>
-                                <ControlTemplate TargetType="ItemsControl">
-                                    <ItemsPresenter/>
-                                </ControlTemplate>
-                            </ItemsControl.Template>
-                        </ItemsControl>
-                    </Expander>
-                </StackPanel>
-            </ScrollViewer>
-        </Grid>
-    </Border>
+                        <ItemsControl.Template>
+                            <ControlTemplate TargetType="ItemsControl">
+                                <ItemsPresenter/>
+                            </ControlTemplate>
+                        </ItemsControl.Template>
+                    </ItemsControl>
+                </Expander>
+            </StackPanel>
+        </ScrollViewer>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="3"
+                    Margin="0 16 16 0">
+            <Button IsDefault="True" Style="{StaticResource MaterialDesignFlatButton}"
+                    Command="{Binding ConfirmCommand}" Cursor="Hand" Visibility="Hidden">
+                SAVE
+            </Button>
+            <Button IsCancel="True" Margin="8 0 0 0" Style="{StaticResource MaterialDesignFlatButton}"
+                    Command="{Binding CancelCommand}" Cursor="Hand">
+                CLOSE
+            </Button>
+        </StackPanel>
+    </Grid>
 </UserControl>
